# keta

./: .dockerignore  .env.example  .gitignore  .mcp.json  README.md  docker-compose.yml  package-lock.json  pyproject.toml
docs/: ARCHITECTURE.md  KNOWLEDGE_GRAPH.md  LLM_CONFIGURATION.md  SETUP.md
features/: objectives.feature
features/steps/: chat_steps.py  objectives_steps.py
infrastructure/local/: Dockerfile.api  Dockerfile.ui  graph-schema.md  init-age.sql  init-db.sql  schema.sql
infrastructure/local/postgres/: Dockerfile
tests/agent-evals/: IMPLEMENTATION_PLAN.md  README.md  metrics.py  run_extraction_eval.py
tests/bdd-features/: README.md  chat.feature  chat100.feature  environment.py
tests/bdd-features/steps/: chat_steps.py  objectives_steps.py
