[project]
name = "keta"
version = "0.1.0"
description = "Knowledge Extract & Talk Agent - Multi-agent POC"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.37.0",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "langgraph>=0.2.45",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "langchain-core>=0.3.15",
    "python-multipart>=0.0.17",
    "python-dotenv>=1.0.1",
    "httpx>=0.26.0",
    "structlog>=25.4.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=25.9.0",
    "ruff>=0.14.1",
    "mypy>=1.18.2",
    "behave>=1.3.3",
    "requests>=2.32.5",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["packages"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]
python_files = ["test_*.py", "*_test.py"]
